fix: Header z-index

--- a/src/client/css/global.css
+++ b/src/client/css/global.css
@@ -68,7 +68,7 @@ body > header {
   box-shadow: 0 6px 6px -8px #0000;
   padding: var(--padding-md) var(--padding-lg);
   transition: box-shadow 0.3s;
-  z-index: 1;
+  z-index: 2;
 }
 
 .scrolled body > header {
